# CEMCL

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  README_EN.md  build.rs  config.json  generate_translations.sh  update_translations.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  jekyll-gh-pages.yml  rust.yml
docs/: 404.html  README.md  README_EN.md  about.html  account_template.json  config_game_template.json  config_launcher_template.json  config_template.json  download.html  hashmap.json  index.html  index_template.json  readme.md
docs/assets/: about.md.BCwiMbK5.js  about.md.BCwiMbK5.lean.js  app.B-kzCHws.js  docs_config.md.CiTOK34L.js  docs_config.md.CiTOK34L.lean.js  docs_config_en.md.DrZ0EUCd.js  docs_config_en.md.DrZ0EUCd.lean.js  docs_index.md.C3MGoZty.js  download.md.CDZxTz9c.js  download.md.CDZxTz9c.lean.js  index.md.BGJRfkGl.js  style.CDySruLC.css
docs/assets/chunks/: theme.DF8x6e--.js  (+3 more)
docs/docs/: config.html  config_en.html  index.html
docs/oldui/: CEMCL.ui  EditVerDialog.ui
include/file/: file.cpp
include/mc_core/: mc_core.cpp  mc_core.hpp
include/strTools/: strTools.cpp  strTools.hpp
res/: AddAccDialog.ui  AddDialog.ui  AddVerDialog.ui  CEMCL.ui  ConfigureDialog.ui  EditAccDialog.ui  EditVerDialog.ui  Settings.ui  about.md  config_template.json  index_template.json  resource.qrc
res/text/: about-en.md  about-zh.md  about.md
res/translate/: cemcl.pot  zh_CN.po
res/translation/: cemcl.pot  zh.po
res/ui/: add-acc-dialog.slint  add-game-dialog.slint  appwindow.slint  cemcl.slint  dialogs.slint  downloader.slint  edit-acc-dialog.slint  edit-game-dialog.slint  messages.slint  settings.slint
src/: CEMCL.cpp  CEMCL.hpp  about.md  add_account.rs  app.rs  cemcl.rs  dialogs.rs  download.md  file_tools.rs  index.md  main.cpp  main.rs  mc_core.rs  settings.rs
src/.vitepress/: config.mts
src/AddAccDialog/: AddAccDialog.cpp  AddAccDialog.hpp  AddAccDialogUI.hpp
src/AddDialog/: AddDialog.cpp  AddDialog.hpp
src/AddVerDialog/: AddVerDialog.cpp  AddVerDialog.hpp  AddVerDialogUI.hpp
src/CEMCL/: CEMCL.cpp  CEMCL.hpp  CEMCLUI.hpp
src/ConfigureDialog/: ConfigureDialog.cpp  ConfigureDialog.hpp
src/EditAccDialog/: EditAccDialog.cpp  EditAccDialog.hpp  EditAccDialogUI.hpp
src/EditVerDialog/: EditVerDialog.cpp  EditVerDialog.hpp  EditVerDialogUI.hpp
src/MCCore/: MCCore.cpp  MCCore.hpp
src/Settings/: Settings.cpp  Settings.hpp  SettingsUI.hpp
src/cemcl/: mod.rs
src/config/: config.h.in
src/dialogs/: add_acc.rs  add_game.rs  edit_acc.rs  edit_game.rs  mod.rs  msg_box.rs
src/docs/: config.md  config_en.md  index.md
src/downloader/: downloader.rs  mod.rs  ui.rs
src/en/: about.md  download.md  index.md
src/file/: file.cpp  file.hpp
src/filestream/: filestream.cpp  filestream.hpp
src/mc/: account.rs  download.rs  game.rs  launch.rs  mod.rs  tools.rs
src/publicStrings/: public_strings.cpp  public_strings.h
src/strTools/: strTools.cpp  strTools.hpp
(+5 files in other folders)
