[package]
name = "cemcl"
version = "0.2.1"
authors = ["constant-e <fmn_tzx@outlook.com>"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
clipboard = "0.5.0"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
slint = "1.9.2"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
webbrowser = "1.0.3"
zip = "2.2.2"

[build-dependencies]
slint-build = "1.9.2"
